--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,15 @@
 # Site settings
-name: Less Or More
-email: luoyan35714@126.com
-author: Freud Kang
-url: http://www.hifreud.com
-resume_site: http://www.hifreud.com/Resume.io/
-github: https://github.com/luoyan35714/
+name: 璐璐的博客
+email: 905937702@qq.com
+author: 任璐
+url: https://gitofrenlu.github.io/
+resume_site: https://gitofrenlu.github.io/
+github: https://github.com/gitofrenlu/gitofrenlu.github.io
 baseurl: ""
-description: Actually, less is more!
-meta_description: 康志华;个人博客;学而不思则罔;思而不学则殆;生命不止;折腾不休
-motto: It's our wits that make us men.
-banner: 学而不思则罔，思而不学则殆。
+description: Live and learn.
+meta_description: 任璐;个人博客;凡事都有偶然的凑巧;结果却又如宿命的必然;
+motto: 
+banner: 凡事都有偶然的凑巧,结果却又如宿命的必然
 
 #permalink: /:categories/:year/:month/:day/:title/
 permalink: /:year/:month/:day/:title/
@@ -17,10 +17,10 @@ paginate: 10
 
 exclude: ['README.md', 'Gemfile.lock', 'Gemfile', 'Rakefile']
 
-github_username: luoyan35714
+github_username: gitofrenlu
 
 # Build settings
 markdown: kramdown
 
-baidu_analysis: 94be4b0f9fc5d94cc0d0415ea6761ae9
+baidu_analysis: 426a1554e44fe1dcc9e2ef0727624f0d
 
